test/classes/initializers/errors/errHandling/throwsBecauseFieldTypeInitThrows.bad
throwsBecauseFieldTypeInitThrows.chpl:4: In initializer:
throwsBecauseFieldTypeInitThrows.chpl:7: error: initializers are not yet allowed to throw errors
