test/classes/initializers/errors/errHandling/throwsBecauseFieldTypeInitThrows.good
throwsBecauseFieldTypeInitThrows.chpl:14: In initializer:
throwsBecauseFieldTypeInitThrows.chpl:15: error: cannot call a throwing function outside of a try! before phase 2
